--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -292,12 +292,14 @@
     </div>
     <div class="canvas-div">
         <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="450" height="500"></canvas>
     </div>
     <div class="canvas-div-2">
         <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
-        <canvas id="canvas2"></canvas>
+        <canvas id="canvas2" width="4500" height="5100"></canvas>
     </div>
+
+    <img src="./image.png" alt="" style="display: none;" id="image-id">
 
     <div>
         <canvas id="exportCanvas" style="display: none;"></canvas>
