--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -192,7 +192,7 @@
                 <button class="btn mt" id="shirtSize">Select Shirt Size</button>
                 <button class="btn mt" id="edit-btn" style="display: none;">Return To Edit</button>
                 <button class="btn mt" id="cart-btn" style="display: none;">Add to Cart</button>
-                <button id="download">Download</button>
+                <!-- <button id="download">Download</button> -->
             </div>
 
 
