--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -10,6 +10,34 @@
 </head>
 
 <body>
+
+    <div class="button-div">
+        <button id="holaBtn">Front</button>
+        <button id="adiosBtn">Back</button>
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <div class="canvas-div">
+        <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
+        <canvas id="canvas" width="4500" height="5100"></canvas>
+    </div>
+    <div class="canvas-div-2">
+        <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
+        <canvas id="canvas2" width="4500" height="5100"></canvas>
+    </div>
+
+    <img src="./image.png" alt="" style="display: none;" id="image-id">
+
+    <div>
+        <canvas id="exportCanvas" style="display: none;"></canvas>
+    </div>
+
+    <img id="red-dot" src="https://cdn-icons-png.flaticon.com/512/565/565888.png" class="red-dot"
+        style="display: none;">
+    <div id="center-coordinates" class="coordinates1"></div>
+    <div id="top-coordinates" class="coordinates2"></div>
+
+    <img id="shirt-img" src="./Shirt/Front/hello.jpeg" style="display: none;" alt="">
+
     <div id="sidebar-canvas-one" class="sidebar">
         <label for="textbox" style="display: none;" id="text-preview">Text Preview: </label>
         <span class="cross-icon"> &#x2715;</span>
@@ -105,7 +133,6 @@
 
                 </form>
             </div>
-
             <div>
                 <div class="flex buttons-container">
                     <button class="btn" onclick="document.getElementById('input').click()">Add Image</button>
@@ -188,14 +215,15 @@
                         <span>&#10004;</span>
                     </div>
                 </div>
-                <button class="btn mt" id="shirtColor">Select Shirt Color</button>
-                <button class="btn mt" id="shirtSize">Select Shirt Size</button>
-                <button class="btn mt" id="edit-btn" style="display: none;">Return To Edit</button>
-                <button class="btn mt" id="cart-btn" style="display: none;">Add to Cart</button>
-                <!-- <button id="download">Download</button> -->
+                <div class="shirt-modification-div">
+                    <button class="btn mt" id="shirtColor">Select Shirt Color</button>
+                    <button class="btn mt" id="shirtSize">Select Shirt Size</button>
+                    <button class="btn mt" id="edit-btn" style="display: none;">Return To Edit</button>
+                    <button class="btn mt" id="cart-btn" style="display: none;">Add to Cart</button>
+                </div>
+                <!-- <button id="download">Download</button>
+                <button id="upload-image">Upload Image</button> -->
             </div>
-
-
             <div class="flex">
                 <i id="boldBtn" class="fa-solid fa-bold" style="display: none;" title="Bold"></i>
                 <i id="italicBtn" style="display: none;" class="fa-solid fa-italic" title="Italic"></i>
@@ -206,7 +234,7 @@
             <div class="labels-div">
                 <label for="fontSizeInput" id="fontsize-label" style="display: none;">
                     Font Size:
-                    <input id="fontSizeInput" type="number" style="display: none;" min="1" value="20">
+                    <input id="fontSizeInput" type="number" style="display: none;" min="1" value="250">
                 </label>
                 <label for="colorPicker" id="color-label" style="display: none;">
                     Text Color:
@@ -284,33 +312,6 @@
 
         </label>
     </div>
-    <div class="button-div">
-        <button id="holaBtn">Front</button>
-        <button id="adiosBtn">Back</button>
-        <i class="fa-solid fa-bars"></i>
-    </div>
-    <div class="canvas-div">
-        <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
-        <canvas id="canvas" width="4500" height="5100"></canvas>
-    </div>
-    <div class="canvas-div-2">
-        <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
-        <canvas id="canvas2" width="4500" height="5100"></canvas>
-    </div>
-
-    <img src="./image.png" alt="" style="display: none;" id="image-id">
-
-    <div>
-        <canvas id="exportCanvas" style="display: none;"></canvas>
-
-    </div>
-
-    <img id="red-dot" src="https://cdn-icons-png.flaticon.com/512/565/565888.png" class="red-dot"
-        style="display: none;">
-    <div id="center-coordinates" class="coordinates1"></div>
-    <div id="top-coordinates" class="coordinates2"></div>
-
-    <img id="shirt-img" src="./Shirt/Front/hello.jpeg" style="display: none;" alt="">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
