--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -18,11 +18,11 @@
     </div>
     <div class="canvas-div">
         <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
-        <canvas id="canvas" width="2000" height="2400"></canvas>
+        <canvas id="canvas" width="1000" height="1400"></canvas>
     </div>
     <div class="canvas-div-2">
         <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
-        <canvas id="canvas2" width="4500" height="5100"></canvas>
+        <!-- <canvas id="canvas2" width="4500" height="5100"></canvas> -->
     </div>
 
     <img src="./image.png" alt="" style="display: none;" id="image-id">
