--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="canvas-div-2">
         <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
-        <!-- <canvas id="canvas2" width="4500" height="5100"></canvas> -->
+        <canvas id="canvas2" width="4500" height="5100"></canvas>
     </div>
 
     <img src="./image.png" alt="" style="display: none;" id="image-id">
