--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -216,7 +216,7 @@
                 <!-- <button id="download">Download</button>
                 <button id="upload-image">Upload Image</button> -->
             </div>
-            <div class="flex">
+            <div class="flex text-btn-div">
                 <i id="boldBtn" class="fa-solid fa-bold" style="display: none;" title="Bold"></i>
                 <i id="italicBtn" style="display: none;" class="fa-solid fa-italic" title="Italic"></i>
                 <i id="alignLeftBtn" style="display: none;" class="fa-solid fa-align-left" title="Left Align"></i>
