--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -213,8 +213,8 @@
                     <button class="btn mt" id="edit-btn" style="display: none;">Return To Edit</button>
                     <button class="btn mt" id="cart-btn" style="display: none;">Add to Cart</button>
                 </div>
-                <!-- <button id="download">Download</button>
-                <button id="upload-image">Upload Image</button> -->
+                <!-- <button id="download">Download</button> -->
+                <button id="upload-image">Upload Image</button>
             </div>
             <div class="flex text-btn-div">
                 <i id="boldBtn" class="fa-solid fa-bold" style="display: none;" title="Bold"></i>
