--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -9,14 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Editor De Camisa</title>
 </head>
 
 <body>
 
     <div class="button-div">
-        <button id="holaBtn">Front</button>
-        <button id="adiosBtn">Back</button>
+        <button class="front-back-btn" id="holaBtn">Front</button>
+        <button class="front-back-btn" id="adiosBtn">Back</button>
     </div>
     <div class="canvas-div">
         <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
