--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -23,11 +23,11 @@
         <button class="front-back-btn" id="adiosBtn">Back</button>
     </div>
     <div class="canvas-div">
-        <img id="shirt-image" src="./Shirt/Front/AAA-Front.jpeg" alt="White">
+        <img id="shirt-image" src="./shirtbg/front/AAA-Front.png" alt="White">
         <canvas id="canvas" width="4500" height="5100"></canvas>
     </div>
     <div class="canvas-div-2">
-        <img id="shirt-image-back" src="./Shirt/Back/AAA Back.jpeg" alt="White">
+        <img id="shirt-image-back" src="./shirtbg/back/AAA-Back.png" alt="White">
         <canvas id="canvas2" width="4500" height="5100"></canvas>
     </div>
 
