--- a/server/public/new-index.html
+++ b/server/public/new-index.html
@@ -402,7 +402,7 @@
                 </tbody>
             </table>
         </div>
-        <img class="shirt-reference-img" src="/server/public/shirt-image.jpg" alt="">
+        <img class="shirt-reference-img" src="../public/shirt-image.jpg" alt="">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
